# 2d-Game_Framework

./: CMakeLists.txt  README.md  main.cpp  paddle.h
Components/: button.h  image.h  rigidbody.h  text.h
Core/: ArchiveUnpacker.h  SceneManager.h  Utils.h  component.h  components.h  engine.cpp  engine.h  object.cpp  object.h  sprite.cpp  sprite.h
Scenes/: MainGameScene.cpp  MainGameScene.h  SceneDeclarations.h  StartScene.cpp  StartScene.h
